[gd_scene load_steps=12 format=3 uid="uid://dnu50h3x1jkj2"]

[ext_resource type="PackedScene" uid="uid://bseken28keq43" path="res://Characters/living_tv.tscn" id="1_5lnem"]
[ext_resource type="Script" path="res://FSM/TVStates/Controlled.gd" id="2_2muyx"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_avmlp"]
resource_local_to_scene = true
resource_name = "TV_02"
cull_mode = 2
roughness = 0.0764706

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_p0rb4"]
resource_local_to_scene = true
resource_name = "Material.109"
cull_mode = 2
roughness = 0.0764706
emission_enabled = true

[sub_resource type="ArrayMesh" id="ArrayMesh_jnirq"]
_surfaces = [{
"aabb": AABB(-0.5523, -0.606603, -0.506792, 1.1046, 1.17679, 1.04829),
"format": 34896613377,
"index_count": 66,
"index_data": PackedByteArray(0, 0, 2, 0, 1, 0, 3, 0, 0, 0, 4, 0, 5, 0, 7, 0, 6, 0, 1, 0, 2, 0, 8, 0, 8, 0, 4, 0, 9, 0, 0, 0, 1, 0, 9, 0, 7, 0, 11, 0, 10, 0, 12, 0, 13, 0, 8, 0, 10, 0, 12, 0, 2, 0, 8, 0, 13, 0, 11, 0, 2, 0, 0, 0, 6, 0, 6, 0, 0, 0, 3, 0, 3, 0, 4, 0, 5, 0, 5, 0, 6, 0, 3, 0, 1, 0, 8, 0, 9, 0, 4, 0, 7, 0, 5, 0, 7, 0, 4, 0, 8, 0, 0, 0, 9, 0, 4, 0, 7, 0, 10, 0, 6, 0, 12, 0, 8, 0, 2, 0, 10, 0, 2, 0, 6, 0, 8, 0, 11, 0, 7, 0),
"name": "TV_02",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 14,
"vertex_data": PackedByteArray(0, 0, 30, 61, 254, 255, 0, 0, 0, 0, 255, 255, 254, 255, 0, 0, 0, 0, 255, 255, 0, 0, 0, 0, 0, 0, 0, 0, 7, 206, 0, 0, 255, 255, 30, 61, 254, 255, 0, 0, 255, 255, 0, 0, 7, 206, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 255, 255, 0, 0, 0, 0, 0, 0, 255, 255, 255, 255, 0, 0, 0, 0, 255, 255, 255, 255, 254, 255, 0, 0, 246, 26, 120, 81, 0, 0, 0, 0, 41, 231, 120, 81, 0, 0, 0, 0, 246, 26, 79, 228, 0, 0, 0, 0, 41, 231, 79, 228, 0, 0, 0, 0)
}, {
"aabb": AABB(-0.435961, -0.232097, -0.506792, 0.881109, 0.67502, 1.00136e-05),
"format": 34896613377,
"index_count": 6,
"index_data": PackedByteArray(0, 0, 2, 0, 1, 0, 0, 0, 1, 0, 3, 0),
"name": "Material.109",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 4,
"vertex_data": PackedByteArray(0, 0, 0, 0, 0, 0, 0, 0, 255, 255, 255, 255, 0, 0, 0, 0, 255, 255, 0, 0, 0, 0, 0, 0, 0, 0, 255, 255, 0, 0, 0, 0)
}]
blend_shape_mode = 0

[sub_resource type="ArrayMesh" id="ArrayMesh_2jicf"]
resource_local_to_scene = true
resource_name = "Cube.306"
_surfaces = [{
"aabb": AABB(-0.5523, -0.606603, -0.506792, 1.1046, 1.17679, 1.04829),
"attribute_data": PackedByteArray(39, 229, 55, 228, 39, 229, 95, 223, 223, 234, 95, 223, 199, 234, 188, 229, 199, 227, 21, 228, 199, 234, 21, 228, 199, 227, 241, 227, 199, 234, 97, 223, 199, 227, 97, 223, 199, 234, 12, 229, 199, 227, 97, 223, 199, 234, 97, 223, 223, 234, 95, 223, 39, 229, 95, 223, 39, 229, 55, 228, 199, 234, 55, 228, 199, 227, 95, 223, 199, 234, 95, 223, 243, 128, 255, 255, 71, 242, 142, 215, 174, 141, 97, 215, 152, 240, 234, 142, 242, 131, 250, 127, 131, 143, 236, 141, 243, 241, 161, 215, 49, 253, 83, 129, 150, 240, 234, 142, 242, 131, 250, 127, 4, 142, 77, 215, 130, 143, 236, 141, 223, 234, 188, 229, 69, 230, 188, 229, 199, 234, 188, 229, 199, 227, 188, 229, 199, 227, 21, 228, 199, 234, 241, 227, 199, 227, 12, 229, 69, 230, 188, 229, 223, 234, 188, 229, 199, 227, 55, 228, 243, 128, 255, 255, 255, 255, 255, 255, 71, 242, 142, 215, 152, 240, 234, 142, 49, 253, 83, 129, 242, 131, 250, 127, 255, 255, 255, 255, 243, 128, 255, 255),
"format": 34896613399,
"index_count": 66,
"index_data": PackedByteArray(0, 0, 2, 0, 1, 0, 3, 0, 5, 0, 4, 0, 6, 0, 8, 0, 7, 0, 9, 0, 11, 0, 10, 0, 12, 0, 14, 0, 13, 0, 15, 0, 17, 0, 16, 0, 18, 0, 20, 0, 19, 0, 21, 0, 23, 0, 22, 0, 24, 0, 26, 0, 25, 0, 27, 0, 29, 0, 28, 0, 2, 0, 0, 0, 30, 0, 30, 0, 0, 0, 31, 0, 32, 0, 34, 0, 33, 0, 6, 0, 7, 0, 35, 0, 9, 0, 10, 0, 36, 0, 14, 0, 38, 0, 37, 0, 38, 0, 14, 0, 12, 0, 15, 0, 16, 0, 39, 0, 40, 0, 42, 0, 41, 0, 43, 0, 45, 0, 44, 0, 24, 0, 25, 0, 46, 0, 27, 0, 28, 0, 47, 0),
"material": SubResource("StandardMaterial3D_avmlp"),
"name": "TV_02",
"primitive": 3,
"uv_scale": Vector4(1.98216, 2, 0, 0),
"vertex_count": 48,
"vertex_data": PackedByteArray(0, 0, 30, 61, 254, 255, 0, 0, 0, 0, 255, 255, 254, 255, 0, 0, 0, 0, 255, 255, 0, 0, 0, 0, 0, 0, 0, 0, 7, 206, 0, 0, 255, 255, 30, 61, 254, 255, 0, 0, 0, 0, 30, 61, 254, 255, 0, 0, 255, 255, 0, 0, 7, 206, 255, 255, 0, 0, 0, 0, 0, 0, 255, 255, 255, 255, 0, 0, 0, 0, 255, 255, 0, 0, 255, 255, 254, 255, 0, 0, 255, 255, 255, 255, 0, 0, 0, 0, 0, 0, 255, 255, 0, 0, 0, 0, 255, 255, 255, 255, 0, 0, 255, 191, 255, 255, 255, 255, 254, 255, 255, 191, 255, 255, 30, 61, 254, 255, 255, 191, 0, 0, 30, 61, 254, 255, 0, 0, 255, 255, 255, 255, 254, 255, 0, 0, 0, 0, 255, 255, 254, 255, 0, 0, 255, 255, 0, 0, 0, 0, 255, 255, 246, 26, 120, 81, 0, 0, 255, 255, 41, 231, 120, 81, 0, 0, 255, 255, 246, 26, 79, 228, 0, 0, 255, 255, 255, 255, 255, 255, 0, 0, 255, 255, 41, 231, 79, 228, 0, 0, 255, 255, 246, 26, 120, 81, 0, 0, 255, 255, 0, 0, 255, 255, 0, 0, 255, 255, 246, 26, 79, 228, 0, 0, 255, 255, 255, 255, 255, 255, 0, 0, 255, 255, 41, 231, 120, 81, 0, 0, 255, 255, 41, 231, 79, 228, 0, 0, 255, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 7, 206, 0, 0, 0, 0, 0, 0, 7, 206, 0, 0, 255, 255, 0, 0, 7, 206, 0, 0, 255, 255, 30, 61, 254, 255, 0, 0, 0, 0, 0, 0, 7, 206, 255, 255, 255, 255, 255, 255, 254, 255, 0, 0, 255, 255, 0, 0, 7, 206, 255, 191, 255, 255, 0, 0, 0, 0, 255, 191, 255, 255, 30, 61, 254, 255, 0, 0, 255, 255, 0, 0, 0, 0, 255, 255, 0, 0, 0, 0, 0, 0, 255, 255, 246, 26, 120, 81, 0, 0, 255, 255, 246, 26, 79, 228, 0, 0, 255, 255, 0, 0, 255, 255, 0, 0, 255, 255, 255, 255, 255, 255, 0, 0, 255, 255, 0, 0, 0, 0, 0, 0, 255, 255, 255, 255, 0, 0, 0, 0, 255, 255, 255, 63, 255, 127, 255, 63, 255, 127, 255, 63, 255, 127, 255, 127, 144, 96, 255, 127, 144, 96, 255, 127, 144, 96, 255, 127, 255, 63, 255, 127, 255, 63, 255, 127, 255, 63, 255, 127, 255, 191, 255, 127, 255, 191, 255, 127, 255, 191, 255, 127, 0, 0, 255, 127, 0, 0, 255, 127, 0, 0, 255, 127, 255, 127, 255, 127, 255, 127, 255, 127, 255, 127, 29, 128, 225, 255, 29, 128, 225, 255, 29, 128, 225, 255, 168, 128, 86, 255, 168, 128, 86, 255, 168, 128, 86, 255, 73, 128, 181, 255, 139, 128, 114, 255, 156, 128, 97, 255, 139, 128, 115, 255, 71, 128, 182, 255, 156, 128, 98, 255, 255, 63, 255, 127, 255, 63, 255, 127, 255, 127, 144, 96, 255, 127, 144, 96, 255, 127, 144, 96, 255, 127, 255, 63, 255, 127, 255, 191, 255, 127, 0, 0, 255, 127, 0, 0, 255, 127, 255, 127, 255, 127, 254, 255, 255, 127, 254, 255, 255, 127, 254, 255, 184, 128, 70, 255, 184, 128, 70, 255, 184, 128, 70, 255, 68, 128, 185, 255, 67, 128, 186, 255)
}, {
"aabb": AABB(-0.435961, -0.232097, -0.506792, 0.881109, 0.67502, 1.00136e-05),
"attribute_data": PackedByteArray(0, 0, 14, 226, 255, 255, 240, 29, 255, 255, 14, 226, 0, 0, 240, 29),
"format": 34896613399,
"index_count": 6,
"index_data": PackedByteArray(0, 0, 2, 0, 1, 0, 0, 0, 1, 0, 3, 0),
"material": SubResource("StandardMaterial3D_p0rb4"),
"name": "Material.109",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 4,
"vertex_data": PackedByteArray(0, 0, 0, 0, 0, 0, 0, 0, 255, 255, 255, 255, 0, 0, 0, 0, 255, 255, 0, 0, 0, 0, 0, 0, 0, 0, 255, 255, 0, 0, 0, 0, 255, 255, 255, 127, 255, 255, 255, 127, 255, 255, 255, 127, 255, 255, 255, 127)
}]
blend_shape_mode = 0
shadow_mesh = SubResource("ArrayMesh_jnirq")

[sub_resource type="ViewportTexture" id="ViewportTexture_86atq"]
viewport_path = NodePath("Content/Images")

[sub_resource type="ViewportTexture" id="ViewportTexture_rs33v"]
viewport_path = NodePath("Content/Images")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_w2uc5"]
resource_local_to_scene = true
albedo_texture = SubResource("ViewportTexture_86atq")
emission_enabled = true
emission_texture = SubResource("ViewportTexture_rs33v")

[sub_resource type="ViewportTexture" id="ViewportTexture_be3kl"]
viewport_path = NodePath("Content/Images")

[sub_resource type="CylinderShape3D" id="CylinderShape3D_c071r"]
height = 8.9966
radius = 3.59204

[node name="TV" instance=ExtResource("1_5lnem")]
motion_mode = 1
watched_value = 500.0

[node name="Mesh" parent="." index="1"]
mesh = SubResource("ArrayMesh_2jicf")
surface_material_override/1 = SubResource("StandardMaterial3D_w2uc5")

[node name="Beam" parent="." index="4"]
light_projector = SubResource("ViewportTexture_be3kl")
spot_range = 9.934

[node name="BeamRange" type="Area3D" parent="Beam" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.347375, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Beam/BeamRange" index="0"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 1, -4)
shape = SubResource("CylinderShape3D_c071r")

[node name="Controlled" type="Node" parent="StateMachine" index="3" node_paths=PackedStringArray("character")]
script = ExtResource("2_2muyx")
character = NodePath("../..")

[node name="Camera3D" type="Camera3D" parent="." index="7"]
transform = Transform3D(1, 0, 0, 0, 0.979102, -0.203368, 0, 0.203368, 0.979102, 0, 0.490317, 0.515821)

[node name="MarginContainer" type="MarginContainer" parent="Camera3D" index="0"]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -27.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="Watched" type="ProgressBar" parent="Camera3D/MarginContainer" index="0"]
unique_name_in_owner = true
visible = false
layout_mode = 2
max_value = 1000.0
value = 500.0

[connection signal="body_entered" from="Beam/BeamRange" to="StateMachine/Controlled" method="_on_beam_range_body_entered"]
[connection signal="body_exited" from="Beam/BeamRange" to="StateMachine/Controlled" method="_on_beam_range_body_exited"]
